--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,15 @@
 authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
 categories = ["network-programming"]
 description = "a client library to work with all file transfer protocols"
-documentation = "https://docs.rs/ka-ching"
+documentation = "https://docs.rs/remotefs"
 edition = "2018"
-homepage = "https://veeso.github.io/ka-ching/"
+homepage = "https://veeso.github.io/remotefs/"
 include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 keywords = ["scp-client", "sftp-client", "ftp-client", "s3-client"]
 license = "MIT"
-name = "ka-ching"
+name = "remotefs"
 readme = "README.md"
-repository = "https://github.com/veeso/ka-ching"
+repository = "https://github.com/veeso/remotefs"
 version = "0.7.0"
 
 [dependencies]
