--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --lib --all-features --no-fail-fast
+          args: --lib --no-default-features --features ssh ftp s3 github-actions with-containers --no-fail-fast
       - name: Format
         run: cargo fmt --all -- --check
       - name: Clippy
