--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,17 +14,17 @@ repository = "https://github.com/veeso/remotefs"
 version = "0.1.0"
 
 [dependencies]
-chrono = "0.4.19"
-log = "0.4.14"
-rust-s3 = { version = "0.27.0-rc4", default-features = false, features = [ "sync-native-tls", "sync" ], optional = true }
-ssh2 = { version = "0.9.0", optional = true }
-suppaftp = { version = "4.1.2", features = [ "secure" ], optional = true }
+chrono = "^0.4.19"
+log = "^0.4.14"
+rust-s3 = { version = "^0.28.0", default-features = false, features = [ "sync-native-tls", "sync" ], optional = true }
+ssh2 = { version = "^0.9.0", optional = true }
+suppaftp = { version = "^4.1.0", features = [ "secure" ], optional = true }
 thiserror = "^1.0.0"
-wildmatch = "2.0.0"
+wildmatch = "^2.0.0"
 
 [dev-dependencies]
-pretty_assertions = "0.7.2"
-tempfile = "3.1.0"
+pretty_assertions = "^1.0.0"
+tempfile = "^3.2.0"
 
 [features]
 default = [ "ssh" ]
