--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,15 @@ version = "0.1.0"
 [dependencies]
 chrono = "^0.4.19"
 log = "^0.4.14"
-rust-s3 = { version = "^0.28.0", default-features = false, features = [ "sync-native-tls", "sync" ], optional = true }
-ssh2 = { version = "^0.9.0", optional = true }
-suppaftp = { version = "^4.1.0", features = [ "secure" ], optional = true }
 thiserror = "^1.0.0"
 wildmatch = "^2.0.0"
+# aws s3
+rust-s3 = { version = "^0.28.0", default-features = false, features = [ "sync-native-tls", "sync" ], optional = true }
+# ftp
+suppaftp = { version = "^4.1.0", features = [ "secure" ], optional = true }
+# ssh
+ssh_config = { version = "^0.1.0", optional = true }
+ssh2 = { version = "^0.9.0", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "^1.0.0"
@@ -29,7 +33,7 @@ tempfile = "^3.2.0"
 [features]
 default = [ "ssh" ]
 ftp = [ "suppaftp" ]
-ssh = [ "ssh2" ]
+ssh = [ "ssh_config", "ssh2" ]
 s3 = [ "rust-s3" ]
 github-actions = [ ]
 with-s3-ci = []
