--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,26 +23,27 @@ rust-s3 = { version = "^0.28.0", default-features = false, features = [ "sync-na
 # ftp
 suppaftp = { version = "^4.1.0", features = [ "secure" ], optional = true }
 # ssh
-ssh_config = { version = "^0.1.0", optional = true }
+ssh2-config = { version = "^0.1.0", optional = true }
 ssh2 = { version = "^0.9.0", optional = true }
 
 [dev-dependencies]
+env_logger = "^0.9.0"
 pretty_assertions = "^1.0.0"
 tempfile = "^3.2.0"
 
 [features]
 default = [ "ssh" ]
+aws-s3 = [ "rust-s3" ]
 ftp = [ "suppaftp" ]
-ssh = [ "ssh_config", "ssh2" ]
-s3 = [ "rust-s3" ]
+ssh = [ "ssh2", "ssh2-config" ]
 github-actions = [ ]
 with-s3-ci = []
 with-containers = []
 
 [target."cfg(target_family = \"unix\")"]
 [target."cfg(target_family = \"unix\")".dependencies]
-users = "0.11.0"
+users = "^0.11.0"
 
 [target."cfg(target_os = \"windows\")"]
 [target."cfg(target_os = \"windows\")".dependencies]
-path-slash = "0.1.4"
+path-slash = "^0.1.4"
