--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Build
         run: cargo build --all-features
       - name: Run tests
-        run: cargo test --verbose --lib --no-default-features --features ssh ftp s3 github-actions with-containers --no-fail-fast
+        run: cargo test --verbose --lib --no-default-features --features ssh,ftp,aws-s3,github-actions,with-containers --no-fail-fast
       - name: Clippy
         run: cargo clippy -- -Dwarnings
