--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ version = "0.1.0"
 
 [dependencies]
 chrono = "^0.4.19"
+lazy_static = "^1.4.0"
 log = "^0.4.14"
+regex = "^1.5.0"
 thiserror = "^1.0.0"
 wildmatch = "^2.0.0"
 # aws s3
