--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,7 +24,9 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --lib --no-default-features --features ssh,ftp,aws-s3,github-actions,with-containers --no-fail-fast
+          args: --no-default-features --features ssh,ftp,aws-s3,github-actions,with-containers --no-fail-fast
+          env:
+            RUST_LOG: trace
       - name: Format
         run: cargo fmt --all -- --check
       - name: Clippy
