--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Build
         run: cargo build --all-features
       - name: Run tests
-        run: cargo test --verbose --lib --no-default-features --features ssh,ftp,aws-s3,github-actions,with-containers --no-fail-fast
+        run: cargo test --verbose --no-default-features --features ssh,ftp,aws-s3,github-actions,with-containers --no-fail-fast
+        env:
+          RUST_LOG: trace
       - name: Clippy
         run: cargo clippy -- -Dwarnings
