--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Build
         run: cargo build --all-features
       - name: Run tests
-        run: cargo test --verbose --no-default-features --features ssh,ftp,aws-s3,github-actions,with-containers --no-fail-fast
+        run: cargo test --verbose --no-default-features --features ssh,ftp,aws-s3,github-actions --no-fail-fast
         env:
           RUST_LOG: trace
       - name: Clippy
-        run: cargo clippy -- -Dwarnings
+        run: cargo clippy --features ssh,ftp,aws-s3 -- -Dwarnings
