--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ wildmatch = "^2.0.0"
 # aws s3
 rust-s3 = { version = "^0.28.0", default-features = false, features = [ "sync-native-tls", "sync" ], optional = true }
 # ftp
-suppaftp = { version = "^4.1.0", features = [ "secure" ], optional = true }
+suppaftp = { version = "^4.2.0", features = [ "secure" ], optional = true }
 # ssh
 ssh2-config = { version = "^0.1.0", optional = true }
 ssh2 = { version = "^0.9.0", optional = true }
@@ -31,6 +31,8 @@ ssh2 = { version = "^0.9.0", optional = true }
 [dev-dependencies]
 env_logger = "^0.9.0"
 pretty_assertions = "^1.0.0"
+rand = "^0.8.4"
+serial_test = "^0.5.1"
 tempfile = "^3.2.0"
 
 [features]
