--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -22,10 +22,10 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --no-default-features --features ssh,ftp,aws-s3,github-actions --no-fail-fast
+          args: --no-default-features --features github-actions --no-fail-fast
         env:
           RUST_LOG: trace
       - name: Format
         run: cargo fmt --all -- --check
       - name: Clippy
-        run: cargo clippy --features ssh,ftp,aws-s3 -- -Dwarnings
+        run: cargo clippy -- -Dwarnings
