--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,16 @@ version = "0.2.0"
 chrono = "^0.4.19"
 log = "^0.4.14"
 thiserror = "^1.0.0"
-wildmatch = "^2.0.0"
+wildmatch = { version = "^2.0.0", optional = true }
 
 [dev-dependencies]
 env_logger = "^0.9.0"
 pretty_assertions = "^1.0.0"
 
 [features]
-default = [ ]
+default = [ "find" ]
 # misc
+find = [ "wildmatch" ]
 no-log = [ "log/max_level_off" ]
 # tests
 github-actions = []
