--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ wildmatch = { version = "^2.0.0", optional = true }
 [dev-dependencies]
 env_logger = "^0.9.0"
 pretty_assertions = "^1.0.0"
+tempfile = "^3.2.0"
 
 [features]
 default = [ "find" ]
