--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["scp-client", "sftp-client", "ftp-client", "s3-client"]
 license = "MIT"
 name = "remotefs"
 readme = "README.md"
-repository = "https://github.com/veeso/remotefs"
+repository = "https://github.com/veeso/remotefs-rs"
 version = "0.2.0"
 
 [dependencies]
